# kitharoidos-0.1

./: .gitignore  kitharoidos.lkshs  kitharoidos.lkshw
kitharoidos/: .haskell-ghc-mod.json  LICENSE  README.md  kitharoidos.cabal  stack.yaml
kitharoidos-legacy/: .project  kitharoidos.lkshf
kitharoidos-legacy/.dist-buildwrapper/src/: Main.hs
kitharoidos-legacy/.dist-buildwrapper/src/Kitharoidos/: .EditPars.hs.bwinfo  .EditPars.hs.bwusage  .GFNN.hs.bwusage  .Pars.hs.bwinfo  .Pars.hs.bwusage  .RenderGFNN.hs.bwinfo  .RunGFNN.hs.bwinfo  EditPars.hs
kitharoidos-legacy/data/: .Fr6 V micr.mscz,  .Fr6 V.mscz,  C bo.mid  C bo.mscz  Fr6 V micr.mscz  Fr6 V.mid  V Fr6 micr.mscz  V Fr6.mscz  bo C.mscz  mod.mid
kitharoidos-legacy/src/: Experiments.hs
kitharoidos-legacy/src/Kitharoidos/: GFNNArchitect.hs  GFNNCanvas.hs  GFNNRenderer.hs  GFNNSimulator.hs  InputGenerator.hs  MIDIReceiver.hs  Pars.hs
kitharoidos-legacy/src/Kitharoidos/GFNNArchitect/: ArchitectPars.hs  DesignArchitecture.hs
kitharoidos-legacy/src/Kitharoidos/GFNNCanvas/: CanvasPars.hs  DisplayGFNN.hs  InitCanvas.hs  TerminateCanvas.hs
kitharoidos-legacy/src/Kitharoidos/GFNNRenderer/: InitRenderer.hs  MusicEngraver.hs
kitharoidos-legacy/src/Kitharoidos/GFNNSimulator/: InitSimulator.hs  RunGFNN.hs  View.hs
kitharoidos-legacy/src/Kitharoidos/InputGenerator/: DriveGenerator.hs
kitharoidos-legacy/src/Kitharoidos/MIDIReceiver/: ReceiverError.hs  ReceiverPars.hs  TerminateReceiver.hs
kitharoidos/.dist-buildwrapper/: kitharoidos.cabal
kitharoidos/.dist-buildwrapper/src/: .Main.hs.bwinfo  .Main.hs.bwusage
kitharoidos/.dist-buildwrapper/src/Kitharoidos/: .GFNN.hs.bwinfo  .GenInput.hs.bwinfo  .GenInput.hs.bwusage  .InitGFNN.hs.bwinfo  .RenderGFNN.hs.bwusage  .RunGFNN.hs.bwusage  GFNN.hs  GenInput.hs  InitGFNN.hs  Pars.hs  RenderGFNN.hs  RunGFNN.hs
kitharoidos/data/: .C F.mscz,  .C bo.mscz,  .V Fr6 micr.mscz,  .V Fr6.mscz,  .b0 C.mscz,  .bo C.mscz,  .mod.mscz,  Fr6 V.mscz  V Fr6.mid  bo C.mid  mod.mscz
kitharoidos/scripts/: readMidiFile.mipi
kitharoidos/src/: Experiments.hs  Kitharoidos.hs  Main.hs
kitharoidos/src/Kitharoidos/: GFNNArchitect.hs  GFNNCanvas.hs  GFNNRenderer.hs  GFNNSimulator.hs  InputGenerator.hs  MIDIReceiver.hs  MusicCalc.hs  Pars.hs
kitharoidos/src/Kitharoidos/GFNNArchitect/: ArchitectPars.hs  Architecture.hs  DesignArchitecture.hs
kitharoidos/src/Kitharoidos/GFNNCanvas/: CanvasError.hs  CanvasPars.hs  DisplayCanvas.hs  DisplayGFNN.hs  InitCanvas.hs  ScrapCanvas.hs  TerminateCanvas.hs
kitharoidos/src/Kitharoidos/GFNNRenderer/: InitRenderer.hs  MusicEngraver.hs  RenderGFNN.hs  RendererPars.hs  RendererState.hs
kitharoidos/src/Kitharoidos/GFNNSimulator/: GFNN.hs  InitSimulator.hs  RunGFNN.hs  SimulatorPars.hs  View.hs  ViewGFNN.hs
kitharoidos/src/Kitharoidos/InputGenerator/: DriveGenerator.hs  GenerateInputs.hs  GeneratorPars.hs  GeneratorState.hs  InitGenerator.hs
kitharoidos/src/Kitharoidos/MIDIReceiver/: CloseMIDI.hs  GetMIDI.hs  InitReceiver.hs  OpenMIDI.hs  ReceiverError.hs  ReceiverPars.hs  TerminateReceiver.hs
