name:                kitharoidos
version:             0.1.0.0
synopsis:            Neural oscillators listening to music
description:         Please see README.md
homepage:            https://github.com/kitharoidos/kitharoidos-0.1#readme
license:             BSD3
license-file:        LICENSE
author:              Michal Hadrava
maintainer:          mihadra@gmail.com
copyright:           Copyright: (c) 2016 Michal Hadrava
category:            Music, Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable kitharoidos
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Chart
                     , Chart-diagrams
                     , GLFW
                     , GLUT
                     , OpenGL
                     , PortMidi
                     , colour
                     , contstuff
                     , ieee
                     , statistics
                     , stm
                     , stm-chans
                     , vector
                     , optparse-applicative
  ghc-options:       -O2 -threaded -rtsopts -with-rtsopts=-N
